# avr-emulator

./: Cargo.toml  Justfile  Makefile  README.md
examples/: flow.rs  step_by_step.rs
hex/arduino_ide/led_flashing/: led_flashing.asm  led_flashing.asm.detail  led_flashing.csv  led_flashing.ino  led_flashing_instructions.asm  led_flashing_with_bootloader.asm
hex/arduino_ide/led_on/: led_on.ino.with_bootloader.standard.hex
hex/arduino_ide/set_pinmode/: set_pinmode.asm.asm  set_pinmode.ino
hex/arduino_ide/set_pinmode2/: set_pinmode2.asm  set_pinmode2.ino  set_pinmode2.ino.with_bootloader.standard.hex
sample/arduino_ide/do_nothing/: do_nothing.asm  do_nothing.asm.detail
sample/arduino_ide/led_on/: led_on.asm
sample/arduino_ide/set_pinmode/: set_pinmode.asm  set_pinmode.asm.detail  set_pinmode.ino.standard.hex  set_pinmode.ino.with_bootloader.standard.hex
sample/arduino_ide/set_pinmode2/: set_pinmode2.ino.standard.hex
sample/avr_studio/led_flashing/: Sketch.cpp  led_flashing.asm  led_flashing.hex  write_command.gdoc
sample/led_flashing/: README.md  led_flashing.asm
src/: atmega328p.rs  avr.rs  avrmcu.rs  core.rs  flash_memory.rs  instruction.rs  io_port.rs  lib.rs  logger.rs  memory.rs  opcode_tree.rs  sram.rs  timer.rs  timer16bit.rs  timer8bit.rs  utils.rs  wasm.rs  word.rs
src/arch/: atmega328p.rs  mod.rs
src/instructions/: arithmetic.rs  branch.rs  data_transfer.rs  decoder.rs  mcu_control.rs  mod.rs  opcode.rs  utilities.rs
src/util/: bit.rs
test/: Cargo.toml
test/src/: main.rs
tests/: led_flashing.rs
