[package]
name = "avr-emulator"
version = "0.1.0"
authors = ["Kazuki Yoshida <kazukiyoshida19920602@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "avr_emulator"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
itertools = "0.8"
difference = "2.0"
colored = "1.9"

[[example]]
name = "step"
path = "examples/step_by_step.rs"

[[example]]
name = "flow"
path = "examples/flow.rs"
